// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Updated Components/List/ListItem Disabled ListItem 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  border: 0.0625rem solid #E7E8FF;
  border-radius: 0.25rem;
  width: undefinedpx;
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-4 {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  border-radius: 0.25rem;
  width: 100%;
  height: auto;
  overflow: auto;
  overflow-x: hidden;
  background: #ffffff;
}

.emotion-5 {
  background-color: rgba(84,94,255,0);
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-5>div {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-5 span[role='presentation'] {
  padding: 0 0.75rem;
  min-height: 3.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  font-weight: 700;
}

.emotion-5[role='option'] {
  padding: 0 0.75rem;
  min-height: 3.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.75rem;
}

.emotion-5[role='option']:hover {
  cursor: initial;
}

.emotion-5[data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-5[aria-selected='true'] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-5[aria-selected='true']>div {
  color: #1552DD;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-5[aria-selected='true'][data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-6 {
  color: #1B214F;
  font-weight: initial;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 strong {
  font-weight: bold;
}

.emotion-6 span {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 .react-switch-handle {
  cursor: not-allowed!important;
  border: 2px solid #b7c3d8!important;
  box-sizing: border-box!important;
  -webkit-transform: translateX(0)!important;
  -moz-transform: translateX(0)!important;
  -ms-transform: translateX(0)!important;
  transform: translateX(0)!important;
}

.emotion-10 .react-switch-handle:hover {
  box-shadow: 0;
  background: !important;
}

.emotion-10 .react-switch-bg {
  cursor: not-allowed!important;
  margin-right: 0!important;
  margin-left: 0!important;
}

.emotion-10 .react-switch-bg:hover~.react-switch-handle {
  box-shadow: 0;
  background: !important;
}

.emotion-11 {
  background-color: rgba(84,94,255,0);
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-11>div {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-11 span[role='presentation'] {
  padding: 0 0.75rem;
  min-height: 2.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  font-weight: 700;
}

.emotion-11[role='option'] {
  padding: 0 0.75rem;
  min-height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.75rem;
}

.emotion-11[role='option']:hover {
  cursor: initial;
}

.emotion-11[data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-11[aria-selected='true'] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-11[aria-selected='true']>div {
  color: #1552DD;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-11[aria-selected='true'][data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-13 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-13 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

.emotion-14 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-15 {
  fill: #1249C4;
  width: 1rem;
  height: 1rem;
}

.emotion-15 path {
  fill: #1249C4;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.75rem;
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-20 {
  display: block;
  cursor: pointer;
  position: relative;
}

.emotion-20>span:nth-of-type(2) {
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  width: 1.25rem;
  height: 1.25rem;
  box-sizing: border-box;
  border: 0.125rem solid #b9cdfc;
  border-radius: 0.25rem;
}

.emotion-20 svg {
  visibility: hidden;
  opacity: 0;
}

.emotion-20:hover,
.emotion-20[data-focus-visible='true'] {
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  background: rgba(84,94,255,0.06);
  box-shadow: 0px 0px 0px 8px rgba(84,94,255,0.06);
  border-radius: 100%;
}

.emotion-20[data-selected='true']:hover,
.emotion-20[data-indeterminate='true']:hover {
  background: none;
  box-shadow: none;
}

.emotion-20[data-selected='true']>span:last-child,
.emotion-20[data-indeterminate='true']>span:last-child {
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  border-color: #175bf5;
  background: #175bf5;
}

.emotion-20[data-selected='true'] svg,
.emotion-20[data-indeterminate='true'] svg {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.emotion-20[data-disabled='true'] {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-20[data-disabled='true']:hover {
  background: none;
  box-shadow: none;
}

.emotion-22 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-22 path {
  fill: #ffffff;
}

.emotion-26 label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.75rem;
  position: relative;
  cursor: pointer;
}

.emotion-26 label:before {
  content: '';
  display: inline-block;
  width: 1.25rem;
  height: 1.25rem;
  box-sizing: border-box;
  border: 0.125rem solid #b9cdfc;
  border-radius: 6.25rem;
  -webkit-transition: all 200ms;
  transition: all 200ms;
  background: rgba(84,94,255,0);
}

.emotion-26 label:hover::before {
  background: rgba(84,94,255,0.06);
  box-shadow: 0px 0px 0px 8px rgba(84,94,255,0.06);
}

.emotion-26 label[data-selected='true']:before {
  border-color: #175bf5;
  border-radius: 50%;
}

.emotion-26 label[data-selected='true']:hover::before {
  background: none;
  box-shadow: none;
}

.emotion-26 label[data-selected='true']:after {
  content: '';
  display: block;
  position: absolute;
  border-radius: 50%;
  width: 0.75rem;
  height: 0.75rem;
  background: #175bf5;
  left: 4px;
  -webkit-animation: circle 0.15s ease-in-out;
  animation: circle 0.15s ease-in-out;
}

.emotion-26 label[data-disabled='true'] {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-26 label[data-disabled='true']:hover::before {
  background: none;
  box-shadow: none;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          data-testid="ictinus_list"
        >
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <ul
              aria-labelledby="react-aria-generated-id"
              className="emotion-4"
              id="react-aria-generated-id"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onMouseDown={[Function]}
              onScroll={[Function]}
              role="listbox"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "height": "100%",
                  "listStyle": "none",
                  "overflowY": "auto",
                  "padding": 0,
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <li
                aria-disabled={true}
                aria-selected={false}
                className="emotion-5 "
                data-key="1"
                data-testid="ictinus_list_item_1"
                id="react-aria-generated-id-option-1"
                onBlur={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
                role="option"
              >
                <div
                  className="emotion-6"
                >
                  <span>
                    This text option is disabled
                  </span>
                </div>
              </li>
              <li
                aria-disabled={true}
                aria-selected={false}
                className="emotion-5 "
                data-key="3"
                data-testid="ictinus_list_item_3"
                id="react-aria-generated-id-option-3"
                onBlur={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
                role="option"
              >
                <div
                  className="emotion-6"
                >
                  <span>
                    This Switch Option is disabled
                  </span>
                </div>
                <div
                  className="emotion-9"
                >
                  <div
                    className="emotion-10"
                  >
                    <div
                      style={
                        Object {
                          "MozTransition": "opacity 0.25s",
                          "MozUserSelect": "none",
                          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                          "WebkitTransition": "opacity 0.25s",
                          "WebkitUserSelect": "none",
                          "borderRadius": 4,
                          "direction": "ltr",
                          "display": "inline-block",
                          "msUserSelect": "none",
                          "opacity": 0.5,
                          "position": "relative",
                          "textAlign": "left",
                          "touchAction": "none",
                          "transition": "opacity 0.25s",
                          "userSelect": "none",
                        }
                      }
                    >
                      <div
                        className="react-switch-bg"
                        onClick={null}
                        onMouseDown={[Function]}
                        style={
                          Object {
                            "MozTransition": "background 0.25s",
                            "WebkitTransition": "background 0.25s",
                            "background": "#dbe1eb",
                            "borderRadius": 4,
                            "cursor": "default",
                            "height": 8,
                            "margin": 6,
                            "position": "relative",
                            "transition": "background 0.25s",
                            "width": 36,
                          }
                        }
                      />
                      <div
                        className="react-switch-handle"
                        onClick={[Function]}
                        onMouseDown={null}
                        onTouchCancel={null}
                        onTouchEnd={null}
                        onTouchMove={null}
                        onTouchStart={null}
                        style={
                          Object {
                            "MozTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "WebkitTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "background": "#f3f5f8",
                            "border": 0,
                            "borderRadius": "50%",
                            "boxShadow": null,
                            "cursor": "default",
                            "display": "inline-block",
                            "height": 20,
                            "outline": 0,
                            "position": "absolute",
                            "top": 0,
                            "transform": "translateX(0px)",
                            "transition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "width": 20,
                          }
                        }
                      />
                      <input
                        data-testid="switch"
                        disabled={true}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyUp={[Function]}
                        role="switch"
                        style={
                          Object {
                            "border": 0,
                            "clip": "rect(0 0 0 0)",
                            "height": 1,
                            "margin": -1,
                            "overflow": "hidden",
                            "padding": 0,
                            "position": "absolute",
                            "width": 1,
                          }
                        }
                        type="checkbox"
                      />
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-disabled={true}
                aria-selected={false}
                className="emotion-11 "
                data-key="4"
                data-testid="ictinus_list_item_4"
                id="react-aria-generated-id-option-4"
                onBlur={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
                role="option"
              >
                <div
                  className="emotion-9"
                >
                  <div
                    className="emotion-13"
                    data-testid="_avatar"
                  >
                    <span
                      className="emotion-14"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-15"
                      />
                    </span>
                  </div>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    This Avatar Option is disabled
                  </span>
                </div>
              </li>
              <li
                aria-disabled={true}
                aria-selected={false}
                className="emotion-5 "
                data-key="5"
                data-testid="ictinus_list_item_5"
                id="react-aria-generated-id-option-5"
                onBlur={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
                role="option"
              >
                <div
                  className="emotion-9"
                >
                  <div
                    className="emotion-19"
                  >
                    <label
                      className="emotion-20"
                      data-disabled={true}
                      data-rac=""
                      data-testid="undefined_undefined_checkbox"
                      onClick={[Function]}
                      onDragStart={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchCancel={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                    >
                      <span
                        onBlur={null}
                        onFocus={null}
                        style={
                          Object {
                            "border": 0,
                            "clip": "rect(0 0 0 0)",
                            "clipPath": "inset(50%)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": 0,
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                      >
                        <input
                          checked={false}
                          data-testid="undefined_undefined_checkbox"
                          disabled={true}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onDragStart={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onKeyUp={[Function]}
                          onMouseDown={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onMouseUp={[Function]}
                          onTouchCancel={[Function]}
                          onTouchEnd={[Function]}
                          onTouchMove={[Function]}
                          onTouchStart={[Function]}
                          type="checkbox"
                        />
                      </span>
                      <span
                        className="emotion-14"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-22"
                        />
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    This Checkbox Option is disabled
                  </span>
                </div>
              </li>
              <li
                aria-disabled={true}
                aria-selected={false}
                className="emotion-5 "
                data-key="6"
                data-testid="ictinus_list_item_6"
                id="react-aria-generated-id-option-6"
                onBlur={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
                role="option"
              >
                <div
                  className="emotion-9"
                >
                  <div
                    className="emotion-26"
                    data-testid="undefined_radio_6_container"
                  >
                    <label
                      data-disabled={true}
                    >
                      <div
                        onBlur={null}
                        onFocus={null}
                        style={
                          Object {
                            "border": 0,
                            "clip": "rect(0 0 0 0)",
                            "clipPath": "inset(50%)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": 0,
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                      >
                        <input
                          onBlur={[Function]}
                          onFocus={[Function]}
                          tabIndex={0}
                        />
                      </div>
                    </label>
                  </div>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    This Radio Option is disabled
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/List/ListItem ListItem compilations 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  border: 0.0625rem solid #E7E8FF;
  border-radius: 0.25rem;
  width: undefinedpx;
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-4 {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  border-radius: 0.25rem;
  width: 100%;
  height: auto;
  overflow: auto;
  overflow-x: hidden;
  background: #ffffff;
}

.emotion-5 {
  background-color: rgba(84,94,255,0);
  opacity: 1;
  cursor: initial;
}

.emotion-5>div {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-5 span[role='presentation'] {
  padding: 0 0.75rem;
  min-height: 3.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  font-weight: 700;
}

.emotion-5[role='option'] {
  padding: 0 0.75rem;
  min-height: 3.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.75rem;
}

.emotion-5[role='option']:hover {
  background-color: rgba(84,94,255,0.06);
  cursor: pointer;
}

.emotion-5[data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-5[aria-selected='true'] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-5[aria-selected='true']>div {
  color: #1552DD;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-5[aria-selected='true'][data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-6 {
  color: #1B214F;
  font-weight: initial;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 strong {
  font-weight: bold;
}

.emotion-6 span {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-7 {
  background-color: rgba(84,94,255,0);
  opacity: 1;
  cursor: initial;
}

.emotion-7>div {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-7 span[role='presentation'] {
  padding: 0 0.75rem;
  min-height: 2.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  font-weight: 700;
}

.emotion-7[role='option'] {
  padding: 0 0.75rem;
  min-height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.75rem;
}

.emotion-7[role='option']:hover {
  background-color: rgba(84,94,255,0.06);
  cursor: pointer;
}

.emotion-7[data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-7[aria-selected='true'] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-7[aria-selected='true']>div {
  color: #1552DD;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-7[aria-selected='true'][data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-14 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  color: #686BB3;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-23 label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.75rem;
  position: relative;
  cursor: pointer;
}

.emotion-23 label:before {
  content: '';
  display: inline-block;
  width: 1.25rem;
  height: 1.25rem;
  box-sizing: border-box;
  border: 0.125rem solid #b9cdfc;
  border-radius: 6.25rem;
  -webkit-transition: all 200ms;
  transition: all 200ms;
  background: rgba(84,94,255,0);
}

.emotion-23 label:hover::before {
  background: rgba(84,94,255,0.06);
  box-shadow: 0px 0px 0px 8px rgba(84,94,255,0.06);
}

.emotion-23 label[data-selected='true']:before {
  border-color: #175bf5;
  border-radius: 50%;
}

.emotion-23 label[data-selected='true']:hover::before {
  background: none;
  box-shadow: none;
}

.emotion-23 label[data-selected='true']:after {
  content: '';
  display: block;
  position: absolute;
  border-radius: 50%;
  width: 0.75rem;
  height: 0.75rem;
  background: #175bf5;
  left: 4px;
  -webkit-animation: circle 0.15s ease-in-out;
  animation: circle 0.15s ease-in-out;
}

.emotion-23 label[data-disabled='true'] {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-23 label[data-disabled='true']:hover::before {
  background: none;
  box-shadow: none;
}

.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.75rem;
}

.emotion-35 {
  display: block;
  cursor: pointer;
  position: relative;
}

.emotion-35>span:nth-of-type(2) {
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  width: 1.25rem;
  height: 1.25rem;
  box-sizing: border-box;
  border: 0.125rem solid #b9cdfc;
  border-radius: 0.25rem;
}

.emotion-35 svg {
  visibility: hidden;
  opacity: 0;
}

.emotion-35:hover,
.emotion-35[data-focus-visible='true'] {
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  background: rgba(84,94,255,0.06);
  box-shadow: 0px 0px 0px 8px rgba(84,94,255,0.06);
  border-radius: 100%;
}

.emotion-35[data-selected='true']:hover,
.emotion-35[data-indeterminate='true']:hover {
  background: none;
  box-shadow: none;
}

.emotion-35[data-selected='true']>span:last-child,
.emotion-35[data-indeterminate='true']>span:last-child {
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  border-color: #175bf5;
  background: #175bf5;
}

.emotion-35[data-selected='true'] svg,
.emotion-35[data-indeterminate='true'] svg {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.emotion-35[data-disabled='true'] {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-35[data-disabled='true']:hover {
  background: none;
  box-shadow: none;
}

.emotion-36 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-37 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-37 path {
  fill: #ffffff;
}

.emotion-52 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-52 .react-switch-handle {
  cursor: unset!important;
  border: 2px solid #b7c3d8!important;
  box-sizing: border-box!important;
  -webkit-transform: translateX(0)!important;
  -moz-transform: translateX(0)!important;
  -ms-transform: translateX(0)!important;
  transform: translateX(0)!important;
}

.emotion-52 .react-switch-handle:hover {
  box-shadow: rgba(14,14,23,0.1) 0 0 0 5px;
  background: #dbe1eb!important;
}

.emotion-52 .react-switch-bg {
  cursor: unset!important;
  margin-right: 0!important;
  margin-left: 0!important;
}

.emotion-52 .react-switch-bg:hover~.react-switch-handle {
  box-shadow: rgba(14,14,23,0.1) 0 0 0 5px;
  background: #dbe1eb!important;
}

.emotion-62 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-62 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

.emotion-64 {
  fill: #1249C4;
  width: 1rem;
  height: 1rem;
}

.emotion-64 path {
  fill: #1249C4;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          data-testid="ictinus_list"
        >
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <ul
              aria-labelledby="react-aria-generated-id"
              className="emotion-4"
              id="react-aria-generated-id"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onMouseDown={[Function]}
              onScroll={[Function]}
              role="listbox"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "height": "100%",
                  "listStyle": "none",
                  "overflowY": "auto",
                  "padding": 0,
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <li
                aria-selected={false}
                className="emotion-5 "
                data-key="1"
                data-testid="ictinus_list_item_1"
                id="react-aria-generated-id-option-1"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-6"
                >
                  <span>
                    Text only
                  </span>
                </div>
              </li>
              <li
                aria-selected={false}
                className="emotion-7 "
                data-key="2"
                data-testid="ictinus_list_item_2"
                id="react-aria-generated-id-option-2"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-6"
                >
                  <span>
                    Text only (compact)
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          data-testid="ictinus_list"
        >
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <ul
              aria-labelledby="react-aria-generated-id"
              className="emotion-4"
              id="react-aria-generated-id"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onMouseDown={[Function]}
              onScroll={[Function]}
              role="listbox"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "height": "100%",
                  "listStyle": "none",
                  "overflowY": "auto",
                  "padding": 0,
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <li
                aria-selected={false}
                className="emotion-5 "
                data-key="3"
                data-testid="ictinus_list_item_3"
                id="react-aria-generated-id-option-3"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-6"
                >
                  <span>
                    Text
                  </span>
                  <p
                    className="emotion-14"
                  >
                    with Secondary Help Text
                  </p>
                </div>
              </li>
              <li
                aria-selected={false}
                className="emotion-7 "
                data-key="4"
                data-testid="ictinus_list_item_4"
                id="react-aria-generated-id-option-4"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-6"
                >
                  <span>
                    Text (compact)
                  </span>
                  <p
                    className="emotion-14"
                  >
                    with Secondary Help Text
                  </p>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          data-testid="ictinus_list"
        >
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <ul
              aria-labelledby="react-aria-generated-id"
              className="emotion-4"
              id="react-aria-generated-id"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onMouseDown={[Function]}
              onScroll={[Function]}
              role="listbox"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "height": "100%",
                  "listStyle": "none",
                  "overflowY": "auto",
                  "padding": 0,
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <li
                aria-selected={false}
                className="emotion-5 "
                data-key="5"
                data-testid="ictinus_list_item_5"
                id="react-aria-generated-id-option-5"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-22"
                >
                  <div
                    className="emotion-23"
                    data-testid="undefined_radio_cherry_container"
                  >
                    <label
                      data-selected={false}
                    >
                      <div
                        onBlur={null}
                        onFocus={null}
                        style={
                          Object {
                            "border": 0,
                            "clip": "rect(0 0 0 0)",
                            "clipPath": "inset(50%)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": 0,
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                      >
                        <input
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          tabIndex={0}
                        />
                      </div>
                    </label>
                  </div>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    Option Radio
                  </span>
                </div>
              </li>
              <li
                aria-selected={false}
                className="emotion-7 "
                data-key="6"
                data-testid="ictinus_list_item_6"
                id="react-aria-generated-id-option-6"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-22"
                >
                  <div
                    className="emotion-23"
                    data-testid="undefined_radio_banana_container"
                  >
                    <label
                      data-selected={false}
                    >
                      <div
                        onBlur={null}
                        onFocus={null}
                        style={
                          Object {
                            "border": 0,
                            "clip": "rect(0 0 0 0)",
                            "clipPath": "inset(50%)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": 0,
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                      >
                        <input
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          tabIndex={0}
                        />
                      </div>
                    </label>
                  </div>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    Option Radio (compact)
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          data-testid="ictinus_list"
        >
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <ul
              aria-labelledby="react-aria-generated-id"
              className="emotion-4"
              id="react-aria-generated-id"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onMouseDown={[Function]}
              onScroll={[Function]}
              role="listbox"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "height": "100%",
                  "listStyle": "none",
                  "overflowY": "auto",
                  "padding": 0,
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <li
                aria-selected={false}
                className="emotion-5 "
                data-key="7"
                data-testid="ictinus_list_item_7"
                id="react-aria-generated-id-option-7"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-22"
                >
                  <div
                    className="emotion-34"
                  >
                    <label
                      className="emotion-35"
                      data-rac=""
                      data-testid="undefined_7_checkbox"
                      onClick={[Function]}
                      onDragStart={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchCancel={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                    >
                      <span
                        onBlur={null}
                        onFocus={null}
                        style={
                          Object {
                            "border": 0,
                            "clip": "rect(0 0 0 0)",
                            "clipPath": "inset(50%)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": 0,
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                      >
                        <input
                          checked={false}
                          data-testid="undefined_7_checkbox"
                          disabled={false}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onDragStart={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onKeyUp={[Function]}
                          onMouseDown={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onMouseUp={[Function]}
                          onTouchCancel={[Function]}
                          onTouchEnd={[Function]}
                          onTouchMove={[Function]}
                          onTouchStart={[Function]}
                          type="checkbox"
                          value="7"
                        />
                      </span>
                      <span
                        className="emotion-36"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-37"
                        />
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    Option Checkbox
                  </span>
                </div>
              </li>
              <li
                aria-selected={false}
                className="emotion-7 "
                data-key="8"
                data-testid="ictinus_list_item_8"
                id="react-aria-generated-id-option-8"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-22"
                >
                  <div
                    className="emotion-34"
                  >
                    <label
                      className="emotion-35"
                      data-rac=""
                      data-testid="undefined_8_checkbox"
                      onClick={[Function]}
                      onDragStart={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchCancel={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                    >
                      <span
                        onBlur={null}
                        onFocus={null}
                        style={
                          Object {
                            "border": 0,
                            "clip": "rect(0 0 0 0)",
                            "clipPath": "inset(50%)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": 0,
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                      >
                        <input
                          checked={false}
                          data-testid="undefined_8_checkbox"
                          disabled={false}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onDragStart={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onKeyUp={[Function]}
                          onMouseDown={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onMouseUp={[Function]}
                          onTouchCancel={[Function]}
                          onTouchEnd={[Function]}
                          onTouchMove={[Function]}
                          onTouchStart={[Function]}
                          type="checkbox"
                          value="8"
                        />
                      </span>
                      <span
                        className="emotion-36"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-37"
                        />
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    Option Checkbox (compact)
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          data-testid="ictinus_list"
        >
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <ul
              aria-labelledby="react-aria-generated-id"
              className="emotion-4"
              id="react-aria-generated-id"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onMouseDown={[Function]}
              onScroll={[Function]}
              role="listbox"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "height": "100%",
                  "listStyle": "none",
                  "overflowY": "auto",
                  "padding": 0,
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <li
                aria-selected={false}
                className="emotion-5 "
                data-key="9"
                data-testid="ictinus_list_item_9"
                id="react-aria-generated-id-option-9"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-6"
                >
                  <span>
                    Option Switch
                  </span>
                </div>
                <div
                  className="emotion-22"
                >
                  <div
                    className="emotion-52"
                  >
                    <div
                      style={
                        Object {
                          "MozTransition": "opacity 0.25s",
                          "MozUserSelect": "none",
                          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                          "WebkitTransition": "opacity 0.25s",
                          "WebkitUserSelect": "none",
                          "borderRadius": 4,
                          "direction": "ltr",
                          "display": "inline-block",
                          "msUserSelect": "none",
                          "opacity": 1,
                          "position": "relative",
                          "textAlign": "left",
                          "touchAction": "none",
                          "transition": "opacity 0.25s",
                          "userSelect": "none",
                        }
                      }
                    >
                      <div
                        className="react-switch-bg"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        style={
                          Object {
                            "MozTransition": "background 0.25s",
                            "WebkitTransition": "background 0.25s",
                            "background": "#dbe1eb",
                            "borderRadius": 4,
                            "cursor": "pointer",
                            "height": 8,
                            "margin": 6,
                            "position": "relative",
                            "transition": "background 0.25s",
                            "width": 36,
                          }
                        }
                      />
                      <div
                        className="react-switch-handle"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        style={
                          Object {
                            "MozTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "WebkitTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "background": "#f3f5f8",
                            "border": 0,
                            "borderRadius": "50%",
                            "boxShadow": null,
                            "cursor": "pointer",
                            "display": "inline-block",
                            "height": 20,
                            "outline": 0,
                            "position": "absolute",
                            "top": 0,
                            "transform": "translateX(0px)",
                            "transition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "width": 20,
                          }
                        }
                      />
                      <input
                        aria-checked={false}
                        checked={false}
                        data-testid="switch"
                        disabled={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyUp={[Function]}
                        role="switch"
                        style={
                          Object {
                            "border": 0,
                            "clip": "rect(0 0 0 0)",
                            "height": 1,
                            "margin": -1,
                            "overflow": "hidden",
                            "padding": 0,
                            "position": "absolute",
                            "width": 1,
                          }
                        }
                        type="checkbox"
                      />
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-selected={false}
                className="emotion-7 "
                data-key="10"
                data-testid="ictinus_list_item_10"
                id="react-aria-generated-id-option-10"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-6"
                >
                  <span>
                    Option Switch (compact)
                  </span>
                </div>
                <div
                  className="emotion-22"
                >
                  <div
                    className="emotion-52"
                  >
                    <div
                      style={
                        Object {
                          "MozTransition": "opacity 0.25s",
                          "MozUserSelect": "none",
                          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                          "WebkitTransition": "opacity 0.25s",
                          "WebkitUserSelect": "none",
                          "borderRadius": 4,
                          "direction": "ltr",
                          "display": "inline-block",
                          "msUserSelect": "none",
                          "opacity": 1,
                          "position": "relative",
                          "textAlign": "left",
                          "touchAction": "none",
                          "transition": "opacity 0.25s",
                          "userSelect": "none",
                        }
                      }
                    >
                      <div
                        className="react-switch-bg"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        style={
                          Object {
                            "MozTransition": "background 0.25s",
                            "WebkitTransition": "background 0.25s",
                            "background": "#dbe1eb",
                            "borderRadius": 4,
                            "cursor": "pointer",
                            "height": 8,
                            "margin": 6,
                            "position": "relative",
                            "transition": "background 0.25s",
                            "width": 36,
                          }
                        }
                      />
                      <div
                        className="react-switch-handle"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        style={
                          Object {
                            "MozTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "WebkitTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "background": "#f3f5f8",
                            "border": 0,
                            "borderRadius": "50%",
                            "boxShadow": null,
                            "cursor": "pointer",
                            "display": "inline-block",
                            "height": 20,
                            "outline": 0,
                            "position": "absolute",
                            "top": 0,
                            "transform": "translateX(0px)",
                            "transition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "width": 20,
                          }
                        }
                      />
                      <input
                        aria-checked={false}
                        checked={false}
                        data-testid="switch"
                        disabled={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyUp={[Function]}
                        role="switch"
                        style={
                          Object {
                            "border": 0,
                            "clip": "rect(0 0 0 0)",
                            "height": 1,
                            "margin": -1,
                            "overflow": "hidden",
                            "padding": 0,
                            "position": "absolute",
                            "width": 1,
                          }
                        }
                        type="checkbox"
                      />
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          data-testid="ictinus_list"
        >
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <ul
              aria-labelledby="react-aria-generated-id"
              className="emotion-4"
              id="react-aria-generated-id"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onMouseDown={[Function]}
              onScroll={[Function]}
              role="listbox"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "height": "100%",
                  "listStyle": "none",
                  "overflowY": "auto",
                  "padding": 0,
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <li
                aria-selected={false}
                className="emotion-5 "
                data-key="11"
                data-testid="ictinus_list_item_11"
                id="react-aria-generated-id-option-11"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-22"
                >
                  <div
                    className="emotion-62"
                    data-testid="_avatar"
                  >
                    <span
                      className="emotion-36"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-64"
                      />
                    </span>
                  </div>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    Option Icon/Avatar
                  </span>
                </div>
              </li>
              <li
                aria-selected={false}
                className="emotion-7 "
                data-key="12"
                data-testid="ictinus_list_item_12"
                id="react-aria-generated-id-option-12"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-22"
                >
                  <div
                    className="emotion-62"
                    data-testid="_avatar"
                  >
                    <span
                      className="emotion-36"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-64"
                      />
                    </span>
                  </div>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    Option Icon/Avatar (compact)
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/List/ListItem Overview 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  margin: -16px;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <p
        className="emotion-3"
        id="the-listitem-component-represents-an-individual-item-in-the-list.-it-can-contain-eitherlistitemtext-or-listitemaction,-both,-or-custom-component."
      >
        The ListItem component represents an individual item in the List. It can contain eitherListItemText or ListItemAction, both, or custom component.
      </p>
    </div>
  </div>
</div>
`;
